--- a/report.tex
+++ b/report.tex
@@ -9,9 +9,8 @@
 	\begin{abstract}
 	\end{abstract}
 	\section{Introduction}
-%
-%importance of BGP in the internet
-%
+	Communication in today's internet is possible by the interplay of many protocols that care for 
+
 	\subsection{Problems with BGP}
 		\subsubsection{Prefix hijacking}
 %	
