--- a/report.tex
+++ b/report.tex
@@ -10,24 +10,28 @@
 	\end{abstract}
 	\section{Introduction}
 	Communication in today's internet is possible by the interplay of many protocols. On the so called internet layer the Internet Protocol \emph{IP} is the primary protocol that is used to forward network packets (datagrams) to the respective target hosts or network. 
-	IP networks are grouped as autonomous systems, \emph{AS}, networks under control of one organization. 
-	The routing inside or between networks is done by every host that speaks IP, but most importantly by special hosts, called routers. 
+	IP networks are grouped as autonomous systems or in short \emph{AS}, networks under control of one organization. 
+	The relaying of those packets inside or between networks is done by every host that speaks IP, but most importantly by special hosts, called routers. 
 	A router has to decide which will be the next hop the datagram has to be moved to. 
 	This can either be inside or between autonomous systems. 
-	To perform this decision, routers make use of additional protocols which are classified as intradomain routing protocols for routing in, and interdomain routing protocols for routing between ASes. 
+	To perform this decision, routers make use of additional protocols which are classified as \emph{intradomain routing protocols} for routing in, and \emph{interdomain routing protocols} for routing between ASes. 
 	The prevalent interdomain routing protocol is BGP, the \emph{Border Gateway Protocol}. 
 	In practise BGP works basically well but the lack of security mechanisms and performance guarantees makes it vulnerable against attacks or configuration mistakes. 
 	There have been a few incidents in the past where misconfigured routers reduced the functionality of bigger parts of the internet. 
 	With manipulated BGP messages, even more harm could be caused if those messages are intelligently sent to specific and important targets. 
 	Therefore it is still highly important to research methods to make BGP secure, performant and reliable. 
 	\section{The Border Gateway Protocol}
-	The Border gateway protocol is an incremental protocol that enables border routers of adjacent autonomous systems to exchange information on how to reach blocks of IP adresses. 
-	Incremental means, that BGP transfers changes of routes and not complete routing tables in every message. Also BGP has a AS Path attribute to which 
-	each BGP router adds its AS number, the unique number each AS has, to the beginning of the path. This is done to prevent routing loops.
+	The Border gateway protocol is an incremental protocol that enables border routers of adjacent autonomous systems to exchange information on how to reach blocks of IP adresses or so called IP prefixes. 
+	Incremental means, that BGP transfers changes of routes and not complete routing tables in every message.
+	Also BGP has an AS Path attribute to which each BGP router adds its AS number, the unique number each AS has, to the beginning of the path. This is done to prevent routing loops. 
+	By advertising routes to other autonomous systems, information on how to reach specific IP prefixes can be distributed automatically without having a global view of the network. On the one hand, this becomes handy when looking at the effort of configuration and maintaing the system. On the other hand this is also a huge security risk.
+	The resulting vulnerabilitiy called \emph{prefix hijacking} and other flaws of BGP that can be attacked will be descripted in the next part of this document.
 	
-
-	\subsection{Problems with BGP}
+	\subsection{Security issues of BGP}
 		\subsubsection{Prefix hijacking}
+		Because of the fact that BGP does not ensure that the originating AS, the AS that introduces a prefix into the system, has those prefixes officially allocated, attackers are able to inject malicious BGP messages. 
+		If those bogus routes are accepted by the target routers, those may select this route and redirect traffic to the attacker which offers him the possibilty to perform e.g. a \emph{Man in the middle} attack. Attackers could also just drop those datagrams which will make the destination appear to be unreachable to parts of the network that believed the malicious routes. 
+		To successfully execute prefix hijacking, attacking routers advertise more specific routes. That means that an IP router would rather prefer a route to a smaller subnet than to a big block of adresses. 
 		
        	\subsubsection{Attacks on TCP}
 		eavesdropping to learn routing information (not a BGP specific attack)
